Backend validations, frontend filter for DELETED, set width on habit dash card, fix alignment in habit dash

--- a/react-app/src/components/HabitDashCard/HabitDashCard.module.css
+++ b/react-app/src/components/HabitDashCard/HabitDashCard.module.css
@@ -12,7 +12,9 @@
 }
 
 .name{
-  min-width: 100px;
+  width: 150px;
+  line-height: 1.3rem;
+  overflow: scroll;
 }
 
 .cubeContainer{
